manifests/chef/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"chef-automate","namespace":"chef"},"spec":{"clusterIP":"None","ports":[{"name":"https","port":8443,"protocol":"TCP","targetPort":8443}],"type":"ClusterIP"}}
    name: chef-automate
    namespace: chef
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    - IPv6
    ipFamilyPolicy: RequireDualStack
    ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"pe-console","namespace":"chef"},"spec":{"ports":[{"name":"https","port":4443,"protocol":"TCP","targetPort":4443}],"type":"ClusterIP"}}
    name: pe-console
    namespace: chef
  spec:
    clusterIP: 10.111.83.4
    clusterIPs:
    - 10.111.83.4
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 4443
      protocol: TCP
      targetPort: 4443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"puppetserver","namespace":"chef"},"spec":{"clusterIP":"None","ports":[{"name":"https","port":8140,"protocol":"TCP","targetPort":8140}],"type":"ClusterIP"}}
    name: puppetserver
    namespace: chef
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    - IPv6
    ipFamilyPolicy: RequireDualStack
    ports:
    - name: https
      port: 8140
      protocol: TCP
      targetPort: 8140
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
